# rchat-backend

./: .env  .gitignore  Cargo.toml
http/: auth.http
migrations/: 1.sql
src/: main.rs
src/handlers/: auth.rs  friend.rs  message.rs  mod.rs  relationship.rs  user.rs  ws.rs
src/models/: friend.rs  message.rs  mod.rs  relationship.rs  user.rs
src/services/: auth.rs  friend.rs  message.rs  mod.rs  relationship.rs  user.rs
